fix: date and time icon misalignment on firefox

--- a/digitransit-component/packages/digitransit-component-datetimepicker/src/helpers/styles.scss
+++ b/digitransit-component/packages/digitransit-component-datetimepicker/src/helpers/styles.scss
@@ -218,7 +218,6 @@ $zindex: base, map-container, map-gradient, map-fullscreen-toggle,
 
   .combobox-container {
     cursor: pointer;
-    position: relative;
   }
 
   .combobox-icon {
@@ -231,9 +230,7 @@ $zindex: base, map-container, map-gradient, map-fullscreen-toggle,
     &.date-input-icon {
       display: flex;
       align-items: center;
-      justify-content: center;
       padding: 0;
-      flex-shrink: 0;
       margin-left: 14px;
       svg {
         width: 20px;
@@ -244,9 +241,7 @@ $zindex: base, map-container, map-gradient, map-fullscreen-toggle,
     &.time-input-icon {
       display: flex;
       align-items: center;
-      justify-content: center;
       padding: 0;
-      flex-shrink: 0;
       margin-left: 8px;
       svg {
         margin-top: 1px;
